# korean-name-generator

./: LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: logging.conf
src/korean_name_generator/: __init__.py  cli.py  data.py  generator.py  models.py
tests/: test_cli.py  test_generator.py
