[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korname-generator"
version = "1.0.0"
description = "Dependency-free Korean name generator library and CLI extracted from Onnuri seed tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sagebynature" }]
keywords = ["korean", "names", "generator", "cli"]
dependencies = []

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0,<9",
    "ruff>=0.14,<0.15",
    "ty==0.0.23",
]

[project.scripts]
korean-name-generator = "korean_name_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_name_generator"]
force-include = { "src/korean_name_generator/config.yaml" = "korean_name_generator/config.yaml", "src/logging.conf" = "korean_name_generator/logging.conf" }

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "docs/refactor-plan.md"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["korean_name_generator"]
exclude = []

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
upload_to_pypi = false
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"
